Seems good, now to download slightly higher resolution and go to bed

--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,12 @@ dependencies:
   - nb_black
   - netcdf4
   - numpy
+  - openpyxl
   - pandas
   - pylint
   - regionmask
   - scipy
+  - seaborn
   - snakemake
   - tqdm
   - xarray
