--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ doc/coverletter.pdf
 doc/review_response.pdf
 doc/revision.pdf
 doc/submission_01.pdf
+doc/submission_02.pdf
+doc/revision_01.pdf
