--- a/.github/workflows/black-formatter.yml
+++ b/.github/workflows/black-formatter.yml
@@ -1,17 +1,14 @@
+# See https://github.com/rickstaa/action-black/#readme
+# with some modifications for syntax
+
 name: black-action
 on: [push, pull_request]
 jobs:
-  name: runner / black
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-    - name: Check files using the black formatter
-      uses: rickstaa/action-black@v1
-      id: action_black
-      with:
-        black_args: "scripts/ codebase/"
-    - name: Annotate diff changes using reviewdog
-      if: steps.action_black.outputs.is_formatted == 'true'
-      uses: reviewdog/action-suggester@v1
-      with:
-        tool_name: blackfmt
+  linter_name:
+    name: runner / black formatter
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: rickstaa/action-black@v1
+        with:
+          black_args: "scripts codebase"
