--- a/.github/workflows/black-formatter.yml
+++ b/.github/workflows/black-formatter.yml
@@ -12,3 +12,8 @@ jobs:
       - uses: rickstaa/action-black@v1
         with:
           black_args: "scripts codebase"
+      - name: Annotate diff changes using reviewdog
+        if: steps.action_black.outputs.is_formatted == 'true'
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: blackfmt
