--- a/.github/workflows/black-formatter.yml
+++ b/.github/workflows/black-formatter.yml
@@ -1,25 +1,29 @@
-# See https://peterevans.dev/posts/github-actions-how-to-automate-code-formatting-in-pull-requests/
-name: black-action
-on: [push, pull_request]
+# https://github.com/marketplace/actions/lint-action
+
+name: Lint
+
+on: push
+
 jobs:
-  format:
+  run-linters:
+    name: Run linters
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
+      - name: Check out Git repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v1
         with:
-          ref: ${{ github.head_ref }}
-      - name: black
-        uses: lgeiger/black-action@v1.0.1
+          python-version: 3.8
+
+      - name: Install Python dependencies
+        run: pip install black
+
+      - name: Run linters
+        uses: wearerequired/lint-action@v1
         with:
-          args: "scripts codebase"
-      - name: Check for modified files
-        id: git-check
-        run: echo ::set-output name=modified::$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
-        run: |
-          git config --global user.name 'James Doss-Gollin'
-          git config --global user.email 'jdossgollin@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Automated changes"
-          git push
+          auto_fix: true
+          black: true
+          black_args: "scripts codebase"
